多页基础配置

--- a/base_multipage/src/views/c.html
+++ b/base_multipage/src/views/c.html
@@ -7,13 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div>
-    <span class="iconfont icon-dianying"></span>
-  </div>
-  <p class='pic1'></p>
-  <p class='pic2'></p>
-  <h3>hello webpack</h3>
-  <h4>000000</h4>
-  <img src="./images/header.png" alt="">
+  我是C
+  <div>asdasd</div>
+  <img src="../images/header.png" alt="">
 </body>
 </html>
