--- a/base_multipage/src/views/d.html
+++ b/base_multipage/src/views/d.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>我是B页面</title>
+  <title>Document</title>
 </head>
 <body>
-  
+  我是D
 </body>
 </html>
