--- a/vue_multipage/views/layers/layer.pug
+++ b/vue_multipage/views/layers/layer.pug
@@ -1,12 +1,3 @@
-- var locals = locals || htmlWebpackPlugin.options.title
-- var author = locals.author
-- var description = locals.description
-- var is_production = locals.is_production
-- var keywords = locals.keywords
-- var min = locals.min
-- var page_ext = locals.page_ext
-- var title = locals.title
-- var version = locals.version
 
 doctype html
 html(lang="zh-cn")
@@ -25,6 +16,7 @@ html(lang="zh-cn")
     meta(name="format-detection" content="telephone=no,email=no")
     block css
   body(ontouchstart)
-    #app()
+    #app(is="app")
     block content
     footer(slot="commom-footer")
+    block js
